// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`given JSON Schema definition with no empty values should do nothing 1`] = `
(JSONSchemaDraft7Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft7Element)
      (JSONSchemaDraft7Element))))
`;

exports[`given empty value for LinkDescription.templateRequired field should replace empty value with semantic element 1`] = `
(JSONSchemaDraft7Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (LinkDescriptionElement
        (MemberElement
          (StringElement)
          (ArrayElement))))))
`;

exports[`given empty value for field allOf should replace empty value with semantic element 1`] = `
(JSONSchemaDraft7Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft7Element))))
`;

exports[`given empty value for field anyOf should replace empty value with semantic element 1`] = `
(JSONSchemaDraft7Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft7Element)
      (JSONSchemaDraft7Element))))
`;

exports[`given empty value for field examples should replace empty value with semantic element 1`] = `
(JSONSchemaDraft7Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement)))
`;

exports[`given empty value for field oneOf should replace empty value with semantic element 1`] = `
(JSONSchemaDraft7Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft7Element)
      (JSONSchemaDraft7Element))))
`;
